# dtn-demo-agent

./: .gitignore  README.md  check_format.sh  client.yaml  install_agents.sh  pyproject.toml  server.yaml  setup.py  zeroconf.md
.github/workflows/: codeql.yml  demo-agent.yml  docs.yaml  formatting.yaml
container/: Dockerfile  dbus.conf  dtn-bp-agent@.service  dtn-btpu-agent@.service  dtn-ltpcl-agent@.service  dtn-tcpcl-agent@.service  dtn-udpcl-agent@.service  example-btpuoe.yaml  example-ltpcl.yaml  example-safe.yaml  example-sand.yaml  example-zeroconf.yaml  example.yaml  run.py
docs/: conf.py  index.rst
src/: pycose_edhoc.py  test_edhoc.py  test_safe.py
src/bp/: agent.py  cla.py  cmd.py  config.py  crypto.py  eidpat.py  safe_info.py  util.py
src/bp/app/: __init__.py  admin.py  base.py  bpsec.py  fragment.py  nmp.py  safe.py  sand.py  zeroconf.py
src/bp/encoding/: admin.py  blocks.py  bpsec.py  bundle.py  fields.py
src/bp/test/: base.py  test_app_bpsec.py  test_app_safe.py  test_eidpat.py  test_encoding.py  test_encoding_admin.py  test_encoding_blocks.py  test_encoding_bpsec.py  test_encoding_fields.py  test_safe_info.py
src/bp/test/data/: exampleA.1.cbor  interop-altered-aad.cbor  interop-confidentiality-base.cbor  interop-confidentiality-full.cbor  interop-confidentiality.cbor  interop-critical-header.cbor  interop-integrity-base.cbor  interop-integrity-full.cbor  key-ExampleA.1.cbor  key-ExampleA.4.cbor  key-ExampleA.5.cbor
src/btpu/: agent.py  cmd.py  config.py  messages.py
src/btpu/test/: bundlegen.py  test_messages.py
src/ltpcl/: __init__.py  agent.py  cmd.py  config.py
src/ltpcl/test/: bundlegen.py  test_agent.py
src/pycose_edhoc/: __init__.py
src/pycose_edhoc/test/: test_edhoc.py
src/scapy_cbor/: fields.py  packets.py  util.py
src/scapy_cbor/test/: test_fields.py
src/tcpcl/: agent.py  cmd.py  config.py  contact.py  formats.py  messages.py  sdnv.py  session.py
src/tcpcl/test/: bundlegen.py  messagegen.py  test_contact.py  test_formats.py  test_messages.py
src/udpcl/: __init__.py  agent.py  cmd.py  config.py
src/udpcl/test/: bundlegen.py
testpki/: ca.crt  ca.key  certs.xdb  client-sign.crt  client-sign.key  client-transport.crt  server-sign.crt  server-sign.key  server-transport.crt
