[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ietf-dtn-demo-agent"
version = "0.0.0"
authors = [
  { name="Brian Sipos", email="brian.sipos+ietf@gmail.com" },
]
description = "A demonstration agent for the DTN BPv7/TCPCLv4/UDPCL"
readme = "README.md"
license = { text="LGPL-3" }
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License (LGPL)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "asn1",
  "cbor2 >=4.1",
  "pycose >=1.0.1",
  "crcmod >=1.7",
  "cryptography >=0.9",
  "certvalidator",
  "dbus-python",
  "lakers-python",
  "portion >=2.1",
  "psutil",
  "PyGObject >=3.34", # glib integration
  "PyYAML",
  "python3-dtls",
  "scapy >=2.4,<2.4.5",
  "six",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "coverage",
]
pylint = [
  "pylint",
  "pylint_junit",
]
flake8 = [
  "flake8",
  "flake8_pyproject",
  "flake8_formatter_junit_xml",
]
docs = [
  "sphinx <6",
  "sphinx_rtd_theme",
  "sphinx-argparse",
]

[tool.pylint.MAIN]
load-plugins="pylint_junit"
suggestion-mode="no"
[tool.pylint.FORMAT]
max-line-length=100
[tool.pylint.DESIGN]
min-public-methods=1

[tool.flake8]
max-line-length=100

[project.scripts]
tcpcl-messagegen = "tcpcl.test.messagegen:main"
tcpcl-bundlegen = "tcpcl.test.bundlegen:main"
tcpcl-agent = "tcpcl.cmd:main"
udpcl-agent = "udpcl.cmd:main"
bp-agent = "bp.cmd:main"

[project.urls]
"Homepage" = "https://github.com/BrianSipos/dtn-demo-agent"
"Bug Tracker" = "https://github.com/BrianSipos/dtn-demo-agent/issues"