[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ietf-dtn-demo-agent"
version = "0.0.0"
authors = [
  { name="Brian Sipos", email="brian.sipos+ietf@gmail.com" },
]
description = "A demonstration agent for the DTN BPv7/TCPCLv4/UDPCLv2"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "asn1",
  "cbor2 ~=5.6",
  "pycose ~=1.0",
  "crcmod ~=1.7",
  "cryptography >=41",
  "pycryptodome ~=3.21",
  "certvalidator",
  "dbus-python",
  "portion ~=2.1",
  "psutil",
  "PyGObject ~=3.34", # glib integration
  "PyYAML",
  "python3-dtls",
  "scapy ~=2.6",
  "six",
  "zeroconf",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-subtests",
  "pytest-cov",
  "coverage",
]
pylint = [
  "pylint",
  "pylint_junit",
]
format = [
  "autopep8",
  "licenseheaders",
]
flake8 = [
  "flake8",
  "flake8_pyproject",
]
docs = [
  "sphinx <6",
  "sphinx_rtd_theme",
  "sphinx-argparse",
]
container = [
  "PyYAML",
  "asn1",
  "cryptography ~=46.0",
]

[tool.pytest.ini_options]
addopts = [
    "--log-cli-level=warning",
    "--import-mode=importlib",
]

[tool.pylint.MAIN]
load-plugins="pylint_junit"
suggestion-mode="no"
[tool.pylint.FORMAT]
max-line-length=100
[tool.pylint.DESIGN]
min-public-methods=1

[tool.autopep8]
max_line_length=160

[tool.flake8]
max-line-length=160

[project.scripts]
tcpcl-messagegen = "tcpcl.test.messagegen:main"
tcpcl-bundlegen = "tcpcl.test.bundlegen:main"
tcpcl-agent = "tcpcl.cmd:main"
udpcl-agent = "udpcl.cmd:main"
bp-agent = "bp.cmd:main"

[project.urls]
"Homepage" = "https://github.com/BrianSipos/dtn-demo-agent"
"Bug Tracker" = "https://github.com/BrianSipos/dtn-demo-agent/issues"
